--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
 	"main": "index.js",
 	"scripts": {
 		"build": "webpack --mode production",
+		"dev":"webpack --mode development",
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
 	"repository": {
@@ -27,6 +28,7 @@
 		"@babel/plugin-transform-runtime": "^7.13.10",
 		"@babel/preset-env": "^7.13.12",
 		"babel-loader": "^8.2.2",
+		"html-webpack-plugin": "^5.3.1",
 		"webpack": "^5.28.0",
 		"webpack-cli": "^4.6.0"
 	}
