--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"main": "index.js",
 	"scripts": {
 		"build": "webpack --mode production",
-		"dev":"webpack --mode development",
+		"dev": "webpack --mode development",
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
 	"repository": {
@@ -28,8 +28,14 @@
 		"@babel/plugin-transform-runtime": "^7.13.10",
 		"@babel/preset-env": "^7.13.12",
 		"babel-loader": "^8.2.2",
+		"css-loader": "^5.2.0",
 		"html-webpack-plugin": "^5.3.1",
+		"mini-css-extract-plugin": "^1.4.0",
 		"webpack": "^5.28.0",
 		"webpack-cli": "^4.6.0"
+	},
+	"dependencies": {
+		"node-sass": "^5.0.0",
+		"sass-loader": "^11.0.1"
 	}
 }
