--- a/package.json
+++ b/package.json
@@ -30,8 +30,10 @@
 		"babel-loader": "^8.2.2",
 		"copy-webpack-plugin": "^8.1.0",
 		"css-loader": "^5.2.0",
+		"css-minimizer-webpack-plugin": "^1.3.0",
 		"html-webpack-plugin": "^5.3.1",
 		"mini-css-extract-plugin": "^1.4.0",
+		"terser-webpack-plugin": "^5.1.1",
 		"webpack": "^5.28.0",
 		"webpack-cli": "^4.6.0"
 	},
