--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"description": "A minimal portfolio with Vanilla JavaScript",
 	"main": "index.js",
 	"scripts": {
-		"build": "webpack --mode production",
+		"build": "webpack --config webpack.config.js",
 		"dev": "webpack --config webpack.config.dev.js",
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
@@ -28,6 +28,7 @@
 		"@babel/plugin-transform-runtime": "^7.13.10",
 		"@babel/preset-env": "^7.13.12",
 		"babel-loader": "^8.2.2",
+		"clean-webpack-plugin": "^3.0.0",
 		"copy-webpack-plugin": "^8.1.0",
 		"css-loader": "^5.2.0",
 		"css-minimizer-webpack-plugin": "^1.3.0",
